--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+    <link href="http://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
